GliefIntegration/force-app/main/default/objects/LegalEntity__c/LegalEntity__c.object-meta.xml
<CustomObject>
    <label>Legal Entity</label>
    <nameField>
        <displayFormat>LE-{000000000}</displayFormat>
        <label>Legal Entity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>