GliefIntegration/force-app/main/default/objects/LegalEntity__c/fields/InitialRegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>InitialRegistrationDate__c</fullName>
    <label>Initial Registration Date</label>
    <type>DateTime</type>
</CustomField>