GliefIntegration/force-app/main/default/objects/LegalEntity__c/fields/Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction__c</fullName>
    <label>Jurisdiction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Jurisdiction</valueSetName>
    </valueSet>
</CustomField>