GliefIntegration/force-app/main/default/objects/LegalEntity__c/fields/LastUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateDate__c</fullName>
    <label>LastUpdateDate</label>
    <type>DateTime</type>
</CustomField>