GliefIntegration/force-app/main/default/objects/LegalEntity__c/fields/LegalAddress__c.field-meta.xml
<CustomField>
    <fullName>LegalAddress__c</fullName>
    <label>Legal Address</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>