GliefIntegration/force-app/main/default/objects/LegalEntity__c/fields/LegalCity__c.field-meta.xml
<CustomField>
    <fullName>LegalCity__c</fullName>
    <label>Legal City</label>
    <type>TextArea</type>
</CustomField>