GliefIntegration/force-app/main/default/objects/LegalEntity__c/fields/LegalCountry__c.field-meta.xml
<CustomField>
    <fullName>LegalCountry__c</fullName>
    <label>Legal Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Jurisdiction</valueSetName>
    </valueSet>
</CustomField>