GliefIntegration/force-app/main/default/objects/LegalEntity__c/fields/LegalName__c.field-meta.xml
<CustomField>
    <fullName>LegalName__c</fullName>
    <label>Legal Name</label>
    <type>TextArea</type>
</CustomField>