GliefIntegration/force-app/main/default/objects/LegalEntity__c/fields/LegalPostalCode__c.field-meta.xml
<CustomField>
    <fullName>LegalPostalCode__c</fullName>
    <label>Legal Postal Code</label>
    <type>TextArea</type>
</CustomField>