GliefIntegration/force-app/main/default/objects/LegalEntity__c/fields/LEI__c.field-meta.xml
<CustomField>
    <fullName>LEI__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Official LEI - external id - required and unique</description>
    <externalId>true</externalId>
    <label>LEI</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>