GliefIntegration/force-app/main/default/objects/LegalEntity__c/fields/NextRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>NextRenewalDate__c</fullName>
    <label>NextRenewalDate</label>
    <type>DateTime</type>
</CustomField>