GliefIntegration/force-app/main/default/objects/LegalEntity__c/fields/RegistrationStatus__c.field-meta.xml
<CustomField>
    <fullName>RegistrationStatus__c</fullName>
    <label>Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RegistrationStatus</valueSetName>
    </valueSet>
</CustomField>